<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context="com.emrassist.audio.ui.activity.login_with_number.LoginUsingMobileNumberActivity">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_15sdp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_140sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/logo_without_bg" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/enter_your_mobile_number"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp">

            <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                app:ccp_defaultCode="1"
                app:ccp_hideNameCode="true"
                app:ccp_textColor="@color/white"
                app:ccp_textSize="@dimen/_14ssp" />

            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:src="@color/hint_color_white" />

            <EditText
                android:id="@+id/etMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:background="@android:color/transparent"
                android:hint="@string/phone_number"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@color/hint_color_white"
                android:textSize="@dimen/_14ssp" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="@color/hint_color_white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnUseSMS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/button_blue"
            android:paddingStart="@dimen/_50sdp"
            android:paddingEnd="@dimen/_50sdp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>