<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center"
    tools:context=".ui.activity.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/_20sdp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/logo_without_bg" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />

        <EditText
            android:id="@+id/edit_text_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableRight="@drawable/ic_profile"
            android:hint="@string/first_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:minHeight="@dimen/_35sdp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_color_white"
            android:textSize="@dimen/_14ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/hint_color_white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/last_name"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />


        <EditText
            android:id="@+id/edit_text_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableRight="@drawable/ic_profile"
            android:hint="@string/last_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:minHeight="@dimen/_35sdp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_color_white"
            android:textSize="@dimen/_14ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/hint_color_white" />


        <!--        <LinearLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:gravity="center_vertical"-->
        <!--            android:orientation="horizontal"-->
        <!--            android:padding="@dimen/_5sdp">-->

        <!--            <com.rilixtech.widget.countrycodepicker.CountryCodePicker-->
        <!--                android:id="@+id/ccp"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:padding="@dimen/_5sdp"-->
        <!--                app:ccp_defaultCode="1"-->
        <!--                app:ccp_hideNameCode="true"-->
        <!--                app:ccp_textColor="@color/white"-->
        <!--                app:ccp_textSize="@dimen/_14ssp" />-->

        <!--            <ImageView-->
        <!--                android:layout_width="1dp"-->
        <!--                android:layout_height="match_parent"-->
        <!--                android:layout_marginStart="@dimen/_5sdp"-->
        <!--                android:layout_marginEnd="@dimen/_5sdp"-->
        <!--                android:src="@color/hint_color_white" />-->

        <!--            <EditText-->
        <!--                android:id="@+id/edit_text_phone_number"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_margin="@dimen/_5sdp"-->
        <!--                android:background="@android:color/transparent"-->
        <!--                android:hint="@string/phone_number"-->
        <!--                android:imeOptions="actionDone"-->
        <!--                android:inputType="number"-->
        <!--                android:singleLine="true"-->
        <!--                android:textColor="@android:color/white"-->
        <!--                android:textColorHint="@color/hint_color_white"-->
        <!--                android:textSize="@dimen/_14ssp" />-->

        <!--        </LinearLayout>-->

        <!--        <View-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="1dp"-->
        <!--            android:background="@color/hint_color_white" />-->

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/button_blue"
            android:paddingStart="@dimen/_50sdp"
            android:paddingEnd="@dimen/_50sdp"
            android:text="@string/update"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>